--- a/Aula5/Atividade/src/index.html
+++ b/Aula5/Atividade/src/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="folha.css"> 
+    <link rel="stylesheet" href="css/folha.css"> 
+    <link rel="stylesheet" href="css/reset.css"> 
 </head>
 <body>
     <nav class="superior">
-        <img class="cab" src="if.png">
+        <img class="cab" src="/Aula5/Atividade/img/if.png">
         <hr>
         <ul>
             <button>Instituições</button>
@@ -36,8 +37,19 @@
             Ad sunt ratione eos incidunt sapiente in incidunt aspernatur rem quia rerum et rerum vero ad corporis animi non repellat nesciunt.
         </div>
     </div>
+    <hr id="baixo">
     <footer>
-        
+        <br>
+        <h3>Instituto Federal de Educação, Ciência e Tecnologia de Santa Catarina - IFSC</h3>
+        <img class="footer" src="/Aula5/Atividade/img/selo10anos.png">
+        <h4>Rua 14 de Julho, 150, Coqueiros, CEP: 88075-010, Florianópolis-SC</h4>
+        <h4>Telefone: (48) 3877-9000 | Fax: (48) 3877-9060</h4>
+        <h4>CNPJ 11.402.887/0001-60</h4>
+        <h4>Horário de funcionamento: das 8h às 12h e das 13h às 17h, de segunda a sexta-feira.</h4>
+        <br>
+        <h4>Clique <a href="https://ifsc.edu.br/">Aqui</a> para ver o site do IFSC</h4>
+        <br><br>
+        <h5>Criado por Edson Luiz Zuchi</h5>
     </footer>
 </body>
 </html>
