--- a/Aula5/Atividade/src/index.html
+++ b/Aula5/Atividade/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="superior">
-        <img class="cab" src="/Aula5/Atividade/img/if.png">
+        <img class="cab" src="img/if.png">
         <hr>
         <ul>
             <button>Instituições</button>
@@ -41,7 +41,7 @@
     <footer>
         <br>
         <h3>Instituto Federal de Educação, Ciência e Tecnologia de Santa Catarina - IFSC</h3>
-        <img class="footer" src="/Aula5/Atividade/img/selo10anos.png">
+        <img class="footer" src="img/selo10anos.png">
         <h4>Rua 14 de Julho, 150, Coqueiros, CEP: 88075-010, Florianópolis-SC</h4>
         <h4>Telefone: (48) 3877-9000 | Fax: (48) 3877-9060</h4>
         <h4>CNPJ 11.402.887/0001-60</h4>
