--- a/Teste/SiteDetran/index.html
+++ b/Teste/SiteDetran/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="back">
         <div class="white">
-            <img src="img/detran.jpg" id="topo">
+            <div class="top"></div>
             <br>
             <p class="text">Problema de acesso a página. Usuário não autorizado.</p>
         </div>
